# poucolab

./: .gitignore  Cargo.toml  README.md  docker-compose.yml
auth_service/: Cargo.toml  Dockerfile
auth_service/src/: app_state.rs  lib.rs  main.rs
auth_service/src/data_client/: client.rs  http.rs  mod.rs
auth_service/src/data_service/: client.rs  mod.rs  stream_response.rs
auth_service/src/rest/: mod.rs  test_api.rs
backend_common/: Cargo.toml
backend_common/src/db/: mod.rs  pool.rs
backend_common/src/rest/: api_errors.rs  mod.rs
data_service/: Cargo.toml  Dockerfile
data_service/src/: app_state.rs  lib.rs  main.rs
data_service/src/rest/: test_api.rs
docs/: db_schemas.md  mvp_detailed_plan.md  project_description.md
frontend/: Cargo.toml  index.html  tailwind.config.js
frontend/locales/en-gb/: main.ftl
frontend/locales/fr/: main.ftl
frontend/src/: app.rs
frontend/src/components/: dropdown.rs  language_selector.rs  mod.rs
frontend/src/pages/: landing_page.rs  mod.rs
nginx/: nginx.conf
shared/: Cargo.toml
shared/src/rest/: test_api.rs
users_service/: Cargo.toml  Dockerfile
