[package]
name = "auth_service"
version = "0.1.0"
edition = "2024"

[dependencies]
shared = { path = "../shared" }
backend_common = { path = "../backend_common" }

anyhow = "1.0.97"
dotenvy = "0.15.7"

axum = { version = "0.8.3" }
axum-extra = { version = "0.10.1", features = ["typed-header"] }

futures = "0.3"
futures-util = { version = "0.3", default-features = false, features = [
    "sink",
    "std",
] }
tokio = { version = "1", features = ["full"] }

http = "1.2.0"
headers = "0.4.0"
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["cors", "fs", "trace"] }

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "postgres",
    "sqlite",
    "chrono",
] }

serde = "1.0.219"
serde_json = "1.0.140"
chrono = "0.4.41"
reqwest = { version = "0.12.22", features = ["json", "stream"] }
bytes = "1.10.1"

[features]
default = ["sqlite"]
sqlite = ["backend_common/sqlite"]
postgres = ["backend_common/postgres"]
