[package]
name = "backend_common"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"

axum = { version = "0.8.3" }
axum-extra = { version = "0.10.1", features = ["typed-header"] }

http = "1.2.0"

sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "postgres",
    "sqlite",
    "chrono",
] }

serde = "1.0.219"

[features]
sqlite = []
postgres = []
